package com.gsonkeno.pattern.decorator;

/**
 * Created by gaosong on 2018-01-16
 */
public abstract class SchoolReport {

    public abstract void report();

    public abstract void sign(String name);
}
